# individual_players

./: .copier-answers.yml  .gitignore  README.md  adjusted_model.ipynb  adjusted_model_prior.ipynb  cli.py  create_all_performances.py  current_teams.ipynb  current_teams.py  defensive_vpp_model.ipynb  defensive_vpp_model_prior.ipynb  explore.ipynb  fit_possession_allocator.py  names.py  priors.ipynb  pyproject.toml  rosters.py  team_priors.ipynb  vpp_model.ipynb  vpp_model.py  vpp_updates.ipynb  vpp_yoy.ipynb
.devcontainer/: Dockerfile  devcontainer.json
data/: README.md
individual_players/: __init__.py  allocator.py  constants.py  filled_box_score.py  league_model.py  loop.py  per.py  performance_filter.py  players.py  ratings.py  totals.py  types.py  update_params.py  year.py
individual_players/callbacks/: __init__.py  allocation.py  defense.py  defense_adjusted.py  defense_adjusting.py  types.py
individual_players/priors/: __init__.py  simple.py  team_history.py  types.py
models/: README.md
