[tool.poetry]
name = "individual_players"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
pylint = "^2.12.2"
mypy = "^0.931"
pandas = "^1.4.1"
seaborn = "^0.11.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
