[tool.poetry]
name = "individual_players"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.0.2"
endgame-aws = {git = "https://github.com/NathanDeMaria/EndGame.git", rev = "f5a76a551a45308feafda1af20f1fd09f5f7357d", subdirectory = "py-endgame-aws"}
statsmodels = "^0.13.5"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
pylint = "^2.15.5"
mypy = "^0.982"
pandas = "^1.4.1"
seaborn = "^0.11.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
